odoo/template.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  labels:
    name: db002-cms-headless
    service_type: headless
  name: db002-cms-headless
  namespace: db002
spec:
  clusterIP: None
  ports:
  - name: monitoring-port
    port: 30101
    targetPort: 30101
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: mysql
    port: 3306
    targetPort: 3306
  - name: filebrowser
    port: 8000
    targetPort: 8000
  - name: server-port
    port: 60000
    targetPort: 5001
  publishNotReadyAddresses: true
  selector:
    name: db002-cms
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: db002-cms
  namespace: db002
spec:
  rules:
  - host: db001-0.tripanels.com
    http:
      paths:
      - backend:
          serviceName: db002-cms
          servicePort: 80
        path: /
      - backend:
          serviceName: db002-cms
          servicePort: 5001
        path: /cp-agent-api
      - backend:
          serviceName: db002-cms
          servicePort: 8000
        path: /filebrowser
  tls:
  - hosts:
    - db001-0.tripanels.com
    secretName: certificates
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: metrics
    prometheus.io/scrape: 'true'
  labels:
    name: db002-cms-local
    service_type: local
  name: db002-cms-local
  namespace: db002
spec:
  ports:
  - name: monitoring-port
    port: 30101
    targetPort: 30101
  selector:
    name: db002-cms
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: db002-cms
    service_type: public
  name: db002-cms
  namespace: db002
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: mysql
    port: 3306
    targetPort: 3306
  - name: filebrowser
    port: 8000
    targetPort: 8000
  - name: server-port
    port: 60000
    targetPort: 5001
  selector:
    name: db002-cms
  type: ClusterIP
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  annotations:
    prometheus.io/path: metrics
    prometheus.io/scrape: 'true'
  labels:
    name: db002-cms
    service_name: cms
    stack_name: db002
  name: db002-cms
  namespace: db002
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db002-cms
  serviceName: db002-cms-headless
  template:
    metadata:
      annotations: null
      labels:
        name: db002-cms
        service_name: cms
        stack_name: db002
    spec:
      affinity: {}
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: cloudclusters
        - name: MYSQL_PASSWORD
          value: wpresspwd
        - name: MYSQL_USER
          value: wpressuser
        - name: MYSQL_DATABASE
          value: wpressdata
        - name: WP_USER
          value: wordpress
        - name: WP_PASSWORD
          value: wordpress
        - name: WP_TITLE
          value: wordpress
        - name: WP_EMAIL
          value: email@domain.com
        - name: FB_PASSWORD
          value: admin1
        - name: FB_USERNAME
          value: admin1
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: registry.cloudclusters.net/cloudclusters/wordpress:0.0.40-test
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}
          failureThreshold: 10
          initialDelaySeconds: 80
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        name: wordpress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 3306
          name: mysql
          protocol: TCP
        - containerPort: 8000
          name: filebrowser
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}
          failureThreshold: 10
          initialDelaySeconds: 40
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: '2.0'
            memory: 2G
          requests:
            cpu: '0.1'
            memory: 100M
        volumeMounts:
        - mountPath: /cloudclusters
          name: data
      - env:
        - name: ROOT_PASS
          value: cloudclusters
        - name: POD_LABEL_NAME
          value: db002
        - name: STACK_NAME
          value: db002
        - name: KUBECONFIG
          value: /backup/admin.conf
        image: registry.cloudclusters.net/cloudclusters/wordpressagentcitest:0.0.2
        imagePullPolicy: IfNotPresent
        name: wordpress-agent
        ports:
        - containerPort: 30101
          name: monitoring-port
          protocol: TCP
        - containerPort: 5001
          name: server-port
          protocol: TCP
        resources:
          limits:
            cpu: '1.0'
            memory: 2G
          requests:
            cpu: '0.1'
            memory: 100M
        volumeMounts:
        - mountPath: /cloudclusters
          name: data
        - mountPath: /backup
          name: backup
      initContainers: []
      volumes:
      - hostPath:
          path: /clusterdata/backup/
        name: backup
      - name: certificates
        secret:
          secretName: certificates
  volumeClaimTemplates:
  - metadata:
      annotations:
        volume.beta.kubernetes.io/storage-class: rbd
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 6Gi
